unpackaged/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Education</fullName>
        <description>Lead Process for Education</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>MQL</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Presentation Given</fullName>
        </values>
        <values>
            <fullName>Presentation Scheduled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>Sales Lead Process for both direct and distributors</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Dead</fullName>
        </values>
        <values>
            <fullName>MQL</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Dead_Reason__c</fullName>
        <description>Used to report on why Leads are Dead</description>
        <label>Dead Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Customer</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Export__c</fullName>
        <description>Is this domestic or export. Replaces existing record types of same names.</description>
        <label>Domestic/Export</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domestic_Export</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Size__c</fullName>
        <description>The size of the Lead</description>
        <label>Lead Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Whale</fullName>
                </value>
                <value>
                    <fullName>Shark</fullName>
                </value>
                <value>
                    <fullName>Striper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <businessProcess>Education</businessProcess>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Direct</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <label>Sales - Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Distributor</fullName>
        <active>true</active>
        <businessProcess>Sales</businessProcess>
        <label>Sales - Distributor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>